[gd_scene load_steps=10 format=2]

[ext_resource path="res://Red/scripts/Portas.gd" type="Script" id=1]
[ext_resource path="res://Red/source/gltfs/Materiais_003.material" type="Material" id=2]
[ext_resource path="res://Red/source/audio/doorsfx.wav" type="AudioStream" id=3]
[ext_resource path="res://Red/source/audio/door2.wav" type="AudioStream" id=4]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Plano002"
surfaces/0 = {
"aabb": AABB( -1.07794, -0.0933102, -1.39673, 1.07463, 0.0933202, 2.79606 ),
"array_data": PoolByteArray( 249, 249, 137, 191, 0, 0, 160, 50, 24, 29, 179, 63, 129, 0, 0, 0, 0, 0, 130, 129, 181, 45, 110, 33, 249, 249, 137, 191, 0, 0, 160, 50, 24, 29, 179, 63, 0, 0, 127, 0, 129, 0, 0, 129, 103, 45, 146, 38, 249, 249, 137, 191, 0, 0, 160, 50, 24, 29, 179, 63, 0, 126, 0, 0, 0, 0, 129, 127, 55, 32, 42, 41, 249, 249, 137, 191, 0, 0, 160, 178, 236, 199, 178, 191, 129, 0, 0, 0, 0, 0, 129, 129, 125, 51, 110, 33, 249, 249, 137, 191, 0, 0, 160, 178, 236, 199, 178, 191, 0, 0, 129, 0, 127, 0, 0, 129, 137, 34, 7, 37, 249, 249, 137, 191, 0, 0, 160, 178, 236, 199, 178, 191, 0, 126, 0, 0, 0, 0, 129, 127, 96, 57, 42, 41, 249, 249, 137, 191, 0, 0, 160, 178, 236, 199, 178, 191, 0, 126, 0, 0, 0, 0, 130, 127, 96, 57, 42, 41, 111, 218, 88, 187, 0, 0, 160, 50, 24, 29, 179, 63, 0, 0, 127, 0, 129, 0, 0, 129, 137, 34, 146, 38, 111, 218, 88, 187, 0, 0, 160, 50, 24, 29, 179, 63, 0, 126, 0, 0, 0, 0, 129, 127, 55, 32, 186, 52, 111, 218, 88, 187, 0, 0, 160, 50, 24, 29, 179, 63, 0, 126, 0, 0, 0, 0, 129, 127, 55, 32, 186, 52, 111, 218, 88, 187, 0, 0, 160, 50, 24, 29, 179, 63, 127, 0, 0, 0, 0, 0, 129, 129, 170, 45, 32, 40, 111, 218, 88, 187, 0, 0, 160, 178, 236, 199, 178, 191, 0, 0, 129, 0, 127, 0, 0, 129, 103, 45, 7, 37, 111, 218, 88, 187, 0, 0, 160, 178, 236, 199, 178, 191, 0, 126, 0, 0, 0, 0, 129, 127, 96, 57, 186, 52, 111, 218, 88, 187, 0, 0, 160, 178, 236, 199, 178, 191, 127, 0, 0, 0, 0, 0, 129, 129, 126, 51, 32, 40, 12, 152, 193, 189, 0, 0, 128, 50, 25, 138, 162, 63, 131, 22, 0, 0, 0, 0, 129, 129, 159, 46, 80, 37, 12, 152, 193, 189, 0, 0, 128, 50, 25, 138, 162, 63, 0, 60, 145, 0, 127, 0, 0, 129, 103, 45, 138, 34, 12, 152, 193, 189, 0, 0, 128, 50, 25, 138, 162, 63, 0, 126, 0, 0, 0, 0, 129, 127, 253, 40, 97, 52, 12, 152, 193, 189, 0, 0, 128, 50, 25, 138, 162, 63, 0, 126, 0, 0, 0, 0, 130, 127, 253, 40, 97, 52, 12, 152, 193, 189, 0, 0, 0, 50, 14, 6, 239, 62, 131, 22, 0, 0, 0, 0, 129, 129, 164, 48, 80, 37, 12, 152, 193, 189, 0, 0, 0, 50, 14, 6, 239, 62, 150, 21, 66, 0, 191, 7, 148, 129, 164, 48, 80, 37, 12, 152, 193, 189, 0, 0, 0, 50, 14, 6, 239, 62, 0, 126, 0, 0, 0, 0, 130, 127, 89, 51, 97, 52, 185, 249, 183, 190, 0, 0, 0, 0, 156, 248, 26, 61, 149, 25, 195, 0, 61, 249, 146, 129, 79, 49, 190, 37, 185, 249, 183, 190, 0, 0, 0, 0, 156, 248, 26, 61, 150, 21, 66, 0, 191, 8, 148, 129, 79, 49, 190, 37, 185, 249, 183, 190, 0, 0, 0, 0, 156, 248, 26, 61, 0, 126, 0, 0, 0, 0, 129, 127, 78, 53, 192, 50, 12, 152, 193, 189, 0, 0, 0, 178, 152, 35, 217, 190, 132, 26, 0, 0, 0, 0, 130, 129, 30, 50, 80, 37, 12, 152, 193, 189, 0, 0, 0, 178, 152, 35, 217, 190, 149, 25, 195, 0, 61, 249, 146, 129, 30, 50, 80, 37, 12, 152, 193, 189, 0, 0, 0, 178, 152, 35, 217, 190, 0, 126, 0, 0, 0, 0, 129, 127, 15, 55, 97, 52, 12, 152, 193, 189, 0, 0, 128, 178, 125, 61, 160, 191, 132, 26, 0, 0, 0, 0, 130, 129, 126, 51, 80, 37, 12, 152, 193, 189, 0, 0, 128, 178, 125, 61, 160, 191, 0, 126, 0, 0, 0, 0, 129, 127, 26, 57, 97, 52, 12, 152, 193, 189, 0, 0, 128, 178, 125, 61, 160, 191, 0, 57, 113, 0, 129, 0, 0, 129, 74, 40, 35, 30, 44, 169, 91, 191, 0, 0, 128, 178, 124, 61, 160, 191, 0, 126, 0, 0, 0, 0, 129, 127, 26, 57, 236, 45, 44, 169, 91, 191, 0, 0, 128, 178, 124, 61, 160, 191, 0, 57, 113, 0, 129, 0, 0, 129, 103, 45, 35, 30, 44, 169, 91, 191, 0, 0, 128, 178, 124, 61, 160, 191, 91, 46, 75, 0, 78, 6, 157, 129, 126, 51, 51, 37, 2, 20, 120, 191, 0, 0, 64, 178, 11, 254, 142, 191, 0, 126, 0, 0, 0, 0, 129, 127, 216, 56, 60, 44, 2, 20, 120, 191, 0, 0, 64, 178, 11, 254, 142, 191, 0, 126, 0, 0, 0, 0, 129, 127, 216, 56, 60, 44, 2, 20, 120, 191, 0, 0, 64, 178, 11, 254, 142, 191, 91, 46, 75, 0, 78, 6, 157, 129, 68, 51, 80, 37, 2, 20, 120, 191, 0, 0, 64, 178, 11, 254, 142, 191, 124, 25, 0, 0, 0, 0, 130, 129, 68, 51, 80, 37, 0, 20, 120, 191, 0, 0, 0, 50, 12, 82, 143, 63, 0, 126, 0, 0, 0, 0, 129, 127, 198, 44, 60, 44, 0, 20, 120, 191, 0, 0, 0, 50, 12, 82, 143, 63, 99, 56, 201, 0, 196, 251, 145, 129, 21, 47, 78, 37, 0, 20, 120, 191, 0, 0, 0, 50, 12, 82, 143, 63, 124, 25, 0, 0, 0, 0, 130, 129, 21, 47, 78, 37, 32, 88, 97, 191, 0, 0, 128, 50, 25, 138, 162, 63, 0, 60, 145, 0, 127, 0, 0, 129, 25, 40, 138, 34, 32, 88, 97, 191, 0, 0, 128, 50, 25, 138, 162, 63, 0, 126, 0, 0, 0, 0, 129, 127, 253, 40, 150, 45, 32, 88, 97, 191, 0, 0, 128, 50, 25, 138, 162, 63, 99, 56, 201, 0, 196, 253, 145, 129, 148, 46, 54, 37, 111, 218, 88, 187, 0, 0, 0, 50, 14, 6, 239, 62, 0, 126, 0, 0, 0, 0, 129, 127, 89, 51, 186, 52, 111, 218, 88, 187, 0, 0, 0, 50, 14, 6, 239, 62, 107, 10, 189, 0, 190, 251, 149, 129, 99, 48, 32, 40, 111, 218, 88, 187, 0, 0, 0, 50, 14, 6, 239, 62, 127, 0, 0, 0, 0, 0, 129, 129, 99, 48, 32, 40, 111, 218, 88, 187, 0, 0, 0, 178, 152, 35, 217, 190, 0, 126, 0, 0, 0, 0, 129, 127, 15, 55, 186, 52, 111, 218, 88, 187, 0, 0, 0, 178, 152, 35, 217, 190, 109, 11, 63, 0, 63, 5, 147, 129, 223, 49, 32, 40, 111, 218, 88, 187, 0, 0, 0, 178, 152, 35, 217, 190, 127, 0, 0, 0, 0, 0, 129, 129, 223, 49, 32, 40, 181, 183, 143, 190, 0, 0, 0, 0, 156, 248, 26, 61, 0, 126, 0, 0, 0, 0, 129, 127, 78, 53, 89, 51, 181, 183, 143, 190, 0, 0, 0, 0, 156, 248, 26, 61, 107, 10, 189, 0, 190, 251, 149, 129, 26, 49, 69, 40, 181, 183, 143, 190, 0, 0, 0, 0, 156, 248, 26, 61, 109, 11, 63, 0, 63, 4, 147, 129, 26, 49, 69, 40, 111, 218, 88, 187, 99, 25, 191, 189, 24, 29, 179, 63, 0, 129, 0, 0, 127, 0, 0, 127, 236, 59, 210, 49, 111, 218, 88, 187, 99, 25, 191, 189, 24, 29, 179, 63, 0, 129, 0, 0, 127, 0, 0, 127, 236, 59, 210, 49, 111, 218, 88, 187, 99, 25, 191, 189, 24, 29, 179, 63, 0, 0, 127, 0, 129, 0, 0, 129, 137, 34, 15, 40, 111, 218, 88, 187, 99, 25, 191, 189, 24, 29, 179, 63, 127, 0, 0, 0, 0, 0, 129, 129, 170, 45, 3, 39, 249, 249, 137, 191, 99, 25, 191, 189, 24, 29, 179, 63, 129, 0, 0, 0, 0, 0, 129, 129, 182, 45, 230, 35, 249, 249, 137, 191, 99, 25, 191, 189, 24, 29, 179, 63, 0, 129, 0, 0, 127, 0, 0, 127, 110, 57, 210, 49, 249, 249, 137, 191, 99, 25, 191, 189, 24, 29, 179, 63, 0, 0, 127, 0, 129, 0, 0, 129, 103, 45, 15, 40, 249, 249, 137, 191, 103, 25, 191, 189, 236, 199, 178, 191, 129, 0, 0, 0, 0, 0, 130, 129, 126, 51, 230, 35, 249, 249, 137, 191, 103, 25, 191, 189, 236, 199, 178, 191, 0, 129, 0, 0, 127, 0, 0, 127, 110, 57, 240, 59, 249, 249, 137, 191, 103, 25, 191, 189, 236, 199, 178, 191, 0, 129, 0, 0, 127, 0, 0, 127, 110, 57, 240, 59, 249, 249, 137, 191, 103, 25, 191, 189, 236, 199, 178, 191, 0, 0, 129, 0, 127, 0, 0, 129, 137, 34, 146, 38, 111, 218, 88, 187, 105, 25, 191, 189, 236, 199, 178, 191, 0, 129, 0, 0, 127, 0, 0, 127, 236, 59, 240, 59, 111, 218, 88, 187, 105, 25, 191, 189, 236, 199, 178, 191, 0, 0, 129, 0, 127, 0, 0, 129, 103, 45, 146, 38, 111, 218, 88, 187, 105, 25, 191, 189, 236, 199, 178, 191, 127, 0, 0, 0, 0, 0, 129, 129, 126, 51, 3, 39, 111, 218, 88, 187, 102, 25, 191, 189, 152, 35, 217, 190, 0, 129, 0, 0, 126, 0, 0, 127, 236, 59, 175, 57, 111, 218, 88, 187, 102, 25, 191, 189, 152, 35, 217, 190, 109, 11, 63, 0, 63, 5, 147, 129, 223, 49, 3, 39, 111, 218, 88, 187, 102, 25, 191, 189, 152, 35, 217, 190, 127, 0, 0, 0, 0, 0, 129, 129, 223, 49, 3, 39, 164, 89, 227, 189, 100, 25, 191, 189, 214, 11, 156, 63, 131, 22, 0, 0, 0, 0, 129, 129, 202, 46, 147, 38, 164, 89, 227, 189, 100, 25, 191, 189, 214, 11, 156, 63, 0, 129, 0, 0, 127, 0, 0, 127, 172, 59, 126, 51, 164, 89, 227, 189, 100, 25, 191, 189, 214, 11, 156, 63, 0, 129, 0, 0, 127, 0, 0, 127, 172, 59, 126, 51, 164, 89, 227, 189, 100, 25, 191, 189, 214, 11, 156, 63, 0, 60, 145, 0, 127, 0, 0, 129, 85, 45, 7, 37, 164, 89, 227, 189, 102, 25, 191, 189, 14, 6, 239, 62, 131, 22, 0, 0, 0, 0, 129, 129, 164, 48, 147, 38, 164, 89, 227, 189, 102, 25, 191, 189, 14, 6, 239, 62, 150, 21, 66, 0, 191, 7, 148, 129, 164, 48, 147, 38, 164, 89, 227, 189, 102, 25, 191, 189, 14, 6, 239, 62, 0, 129, 0, 0, 126, 0, 0, 127, 172, 59, 60, 55, 165, 85, 195, 190, 102, 25, 191, 189, 156, 248, 26, 61, 149, 25, 195, 0, 61, 249, 146, 129, 78, 49, 3, 39, 165, 85, 195, 190, 102, 25, 191, 189, 156, 248, 26, 61, 150, 21, 66, 0, 191, 8, 148, 129, 78, 49, 3, 39, 165, 85, 195, 190, 102, 25, 191, 189, 156, 248, 26, 61, 0, 129, 0, 0, 127, 0, 0, 127, 11, 59, 156, 56, 116, 242, 239, 189, 102, 25, 191, 189, 152, 35, 217, 190, 132, 26, 0, 0, 0, 0, 130, 129, 30, 50, 150, 38, 116, 242, 239, 189, 102, 25, 191, 189, 152, 35, 217, 190, 149, 25, 195, 0, 61, 249, 146, 129, 30, 50, 150, 38, 116, 242, 239, 189, 102, 25, 191, 189, 152, 35, 217, 190, 0, 129, 0, 0, 127, 0, 0, 127, 168, 59, 175, 57, 244, 191, 228, 189, 104, 25, 191, 189, 120, 48, 154, 191, 132, 26, 0, 0, 0, 0, 130, 129, 105, 51, 148, 38, 244, 191, 228, 189, 104, 25, 191, 189, 120, 48, 154, 191, 0, 129, 0, 0, 127, 0, 0, 127, 172, 59, 126, 59, 244, 191, 228, 189, 104, 25, 191, 189, 120, 48, 154, 191, 0, 57, 113, 0, 129, 0, 0, 129, 111, 40, 138, 34, 182, 99, 89, 191, 104, 25, 191, 189, 119, 48, 154, 191, 0, 129, 0, 0, 127, 0, 0, 127, 246, 57, 126, 59, 182, 99, 89, 191, 104, 25, 191, 189, 119, 48, 154, 191, 0, 57, 113, 0, 130, 0, 0, 129, 93, 45, 138, 34, 182, 99, 89, 191, 104, 25, 191, 189, 119, 48, 154, 191, 91, 46, 75, 0, 78, 6, 157, 129, 105, 51, 230, 35, 90, 221, 116, 191, 104, 25, 191, 189, 107, 131, 137, 191, 0, 129, 0, 0, 127, 0, 0, 127, 182, 57, 49, 59, 90, 221, 116, 191, 104, 25, 191, 189, 107, 131, 137, 191, 0, 129, 0, 0, 127, 0, 0, 127, 182, 57, 49, 59, 90, 221, 116, 191, 104, 25, 191, 189, 107, 131, 137, 191, 91, 46, 75, 0, 78, 6, 157, 129, 50, 51, 16, 36, 90, 221, 116, 191, 104, 25, 191, 189, 107, 131, 137, 191, 124, 25, 0, 0, 0, 0, 130, 129, 50, 51, 16, 36, 230, 161, 113, 191, 100, 25, 191, 189, 215, 250, 135, 63, 0, 129, 0, 0, 127, 0, 0, 127, 190, 57, 121, 52, 230, 161, 113, 191, 100, 25, 191, 189, 215, 250, 135, 63, 99, 56, 201, 0, 197, 251, 145, 129, 70, 47, 10, 36, 230, 161, 113, 191, 100, 25, 191, 189, 215, 250, 135, 63, 124, 25, 0, 0, 0, 0, 130, 129, 70, 47, 10, 36, 83, 19, 92, 191, 100, 25, 191, 189, 214, 11, 156, 63, 0, 129, 0, 0, 127, 0, 0, 127, 240, 57, 126, 51, 83, 19, 92, 191, 100, 25, 191, 189, 214, 11, 156, 63, 0, 60, 145, 0, 127, 0, 0, 129, 70, 40, 7, 37, 83, 19, 92, 191, 100, 25, 191, 189, 214, 11, 156, 63, 99, 56, 201, 0, 196, 252, 145, 129, 192, 46, 230, 35, 111, 218, 88, 187, 102, 25, 191, 189, 14, 6, 239, 62, 0, 129, 0, 0, 127, 0, 0, 127, 236, 59, 60, 55, 111, 218, 88, 187, 102, 25, 191, 189, 14, 6, 239, 62, 107, 10, 189, 0, 190, 251, 149, 129, 99, 48, 3, 39, 111, 218, 88, 187, 102, 25, 191, 189, 14, 6, 239, 62, 127, 0, 0, 0, 0, 0, 129, 129, 99, 48, 3, 39, 119, 250, 133, 190, 102, 25, 191, 189, 156, 248, 26, 61, 0, 129, 0, 0, 127, 0, 0, 127, 83, 59, 156, 56, 119, 250, 133, 190, 102, 25, 191, 189, 156, 248, 26, 61, 107, 10, 189, 0, 190, 251, 149, 129, 26, 49, 73, 39, 119, 250, 133, 190, 102, 25, 191, 189, 156, 248, 26, 61, 109, 11, 63, 0, 63, 5, 147, 129, 26, 49, 73, 39, 61, 103, 135, 191, 96, 151, 170, 187, 24, 29, 179, 63, 0, 129, 0, 0, 129, 0, 0, 127, 61, 56, 233, 59, 61, 103, 135, 191, 112, 152, 170, 187, 236, 199, 178, 191, 0, 129, 0, 0, 129, 0, 0, 127, 61, 56, 214, 52, 61, 103, 135, 191, 117, 106, 186, 189, 24, 29, 179, 63, 0, 127, 0, 0, 127, 0, 0, 127, 68, 32, 233, 59, 61, 103, 135, 191, 135, 106, 186, 189, 236, 199, 178, 191, 0, 127, 0, 0, 127, 0, 0, 127, 68, 32, 214, 52, 56, 81, 131, 187, 117, 106, 186, 189, 24, 29, 179, 63, 129, 0, 0, 0, 0, 0, 129, 129, 182, 45, 110, 33, 56, 81, 131, 187, 117, 106, 186, 189, 24, 29, 179, 63, 0, 127, 0, 0, 127, 0, 0, 127, 69, 52, 233, 59, 56, 81, 131, 187, 135, 106, 186, 189, 236, 199, 178, 191, 129, 0, 0, 0, 0, 0, 129, 129, 126, 51, 110, 33, 56, 81, 131, 187, 135, 106, 186, 189, 236, 199, 178, 191, 0, 127, 0, 0, 127, 0, 0, 127, 69, 52, 214, 52, 56, 81, 131, 187, 96, 151, 170, 187, 24, 29, 179, 63, 129, 0, 0, 0, 0, 0, 129, 129, 181, 45, 81, 30, 56, 81, 131, 187, 96, 151, 170, 187, 24, 29, 179, 63, 0, 129, 0, 0, 129, 0, 0, 127, 87, 52, 233, 59, 56, 81, 131, 187, 112, 152, 170, 187, 236, 199, 178, 191, 129, 0, 0, 0, 0, 0, 129, 129, 125, 51, 81, 30, 56, 81, 131, 187, 112, 152, 170, 187, 236, 199, 178, 191, 0, 129, 0, 0, 129, 0, 0, 127, 87, 52, 214, 52 ),
"array_index_data": PoolByteArray( 16, 0, 43, 0, 8, 0, 20, 0, 43, 0, 16, 0, 5, 0, 30, 0, 33, 0, 20, 0, 49, 0, 43, 0, 5, 0, 28, 0, 30, 0, 23, 0, 49, 0, 20, 0, 26, 0, 49, 0, 23, 0, 12, 0, 28, 0, 5, 0, 26, 0, 46, 0, 49, 0, 12, 0, 26, 0, 28, 0, 46, 0, 26, 0, 12, 0, 34, 0, 2, 0, 6, 0, 2, 0, 17, 0, 9, 0, 2, 0, 41, 0, 17, 0, 37, 0, 2, 0, 34, 0, 2, 0, 37, 0, 41, 0, 98, 0, 71, 0, 53, 0, 98, 0, 75, 0, 71, 0, 101, 0, 75, 0, 98, 0, 85, 0, 61, 0, 89, 0, 101, 0, 78, 0, 75, 0, 101, 0, 81, 0, 78, 0, 85, 0, 63, 0, 61, 0, 83, 0, 63, 0, 85, 0, 66, 0, 81, 0, 101, 0, 81, 0, 63, 0, 83, 0, 81, 0, 66, 0, 63, 0, 57, 0, 88, 0, 60, 0, 57, 0, 92, 0, 88, 0, 70, 0, 57, 0, 52, 0, 57, 0, 95, 0, 92, 0, 95, 0, 57, 0, 70, 0, 45, 0, 55, 0, 10, 0, 45, 0, 100, 0, 55, 0, 29, 0, 86, 0, 31, 0, 29, 0, 84, 0, 86, 0, 0, 0, 59, 0, 3, 0, 0, 0, 56, 0, 59, 0, 50, 0, 99, 0, 44, 0, 50, 0, 102, 0, 99, 0, 32, 0, 90, 0, 35, 0, 32, 0, 87, 0, 90, 0, 4, 0, 64, 0, 11, 0, 4, 0, 62, 0, 64, 0, 47, 0, 103, 0, 51, 0, 47, 0, 67, 0, 103, 0, 36, 0, 94, 0, 39, 0, 36, 0, 91, 0, 94, 0, 13, 0, 68, 0, 48, 0, 13, 0, 65, 0, 68, 0, 38, 0, 97, 0, 42, 0, 38, 0, 93, 0, 97, 0, 14, 0, 73, 0, 18, 0, 14, 0, 69, 0, 73, 0, 40, 0, 72, 0, 15, 0, 40, 0, 96, 0, 72, 0, 19, 0, 77, 0, 22, 0, 19, 0, 74, 0, 77, 0, 21, 0, 80, 0, 25, 0, 21, 0, 76, 0, 80, 0, 24, 0, 82, 0, 27, 0, 24, 0, 79, 0, 82, 0, 7, 0, 58, 0, 1, 0, 7, 0, 54, 0, 58, 0, 109, 0, 107, 0, 111, 0, 109, 0, 106, 0, 107, 0, 104, 0, 115, 0, 105, 0, 104, 0, 113, 0, 115, 0, 114, 0, 108, 0, 110, 0, 114, 0, 112, 0, 108, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 210,
"material": ExtResource( 2 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 116
}

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -0.0945, 0, 1.2698, -0.0033, 0, 0.4668, -0.0033, 0, 1.3993, -0.0945, 0, 0.4668, -0.0033, 0, 0.4668, -0.0945, 0, 1.2698, -1.0779, 0, -1.3967, -0.8581, 0, -1.2519, -0.9691, 0, -1.1171, -0.0945, 0, 0.4668, -0.2807, 0, 0.0378, -0.0033, 0, 0.4668, -1.0779, 0, -1.3967, -0.0945, 0, -1.2519, -0.8581, 0, -1.2519, -0.3593, 0, 0.0378, -0.2807, 0, 0.0378, -0.0945, 0, 0.4668, -0.0945, 0, -0.4241, -0.2807, 0, 0.0378, -0.3593, 0, 0.0378, -0.0033, 0, -1.3967, -0.0945, 0, -1.2519, -1.0779, 0, -1.3967, -0.0945, 0, -0.4241, -0.0033, 0, -0.4241, -0.2807, 0, 0.0378, -0.0033, 0, -1.3967, -0.0945, 0, -0.4241, -0.0945, 0, -1.2519, -0.0033, 0, -0.4241, -0.0945, 0, -0.4241, -0.0033, 0, -1.3967, -0.9691, 0, -1.1171, -1.0779, 0, 1.3993, -1.0779, 0, -1.3967, -1.0779, 0, 1.3993, -0.0945, 0, 1.2698, -0.0033, 0, 1.3993, -1.0779, 0, 1.3993, -0.8803, 0, 1.2698, -0.0945, 0, 1.2698, -0.9691, 0, 1.1197, -1.0779, 0, 1.3993, -0.9691, 0, -1.1171, -1.0779, 0, 1.3993, -0.9691, 0, 1.1197, -0.8803, 0, 1.2698, -0.0033, -0.0933, 0.4668, -0.111, -0.0933, 1.2191, -0.0033, -0.0933, 1.3993, -0.0033, -0.0933, 0.4668, -0.111, -0.0933, 0.4668, -0.111, -0.0933, 1.2191, -0.2617, -0.0933, 0.0378, -0.111, -0.0933, 0.4668, -0.0033, -0.0933, 0.4668, -0.8492, -0.0933, -1.2046, -1.0779, -0.0933, -1.3967, -0.9565, -0.0933, -1.0743, -0.2617, -0.0933, 0.0378, -0.3815, -0.0933, 0.0378, -0.111, -0.0933, 0.4668, -0.2617, -0.0933, 0.0378, -0.1172, -0.0933, -0.4241, -0.3815, -0.0933, 0.0378, -0.8492, -0.0933, -1.2046, -0.0033, -0.0933, -1.3967, -1.0779, -0.0933, -1.3967, -0.1117, -0.0933, -1.2046, -0.0033, -0.0933, -1.3967, -0.8492, -0.0933, -1.2046, -0.0033, -0.0933, -0.4241, -0.1172, -0.0933, -0.4241, -0.2617, -0.0933, 0.0378, -0.1172, -0.0933, -0.4241, -0.0033, -0.0933, -1.3967, -0.1117, -0.0933, -1.2046, -0.1172, -0.0933, -0.4241, -0.0033, -0.0933, -0.4241, -0.0033, -0.0933, -1.3967, -1.0779, -0.0933, 1.3993, -0.9565, -0.0933, -1.0743, -1.0779, -0.0933, -1.3967, -1.0779, -0.0933, 1.3993, -0.9439, -0.0933, 1.0623, -0.9565, -0.0933, -1.0743, -0.111, -0.0933, 1.2191, -1.0779, -0.0933, 1.3993, -0.0033, -0.0933, 1.3993, -1.0779, -0.0933, 1.3993, -0.8597, -0.0933, 1.2191, -0.9439, -0.0933, 1.0623, -0.8597, -0.0933, 1.2191, -1.0779, -0.0933, 1.3993, -0.111, -0.0933, 1.2191, -0.0033, 0, 0.4668, -0.0033, -0.0933, 1.3993, -0.0033, 0, 1.3993, -0.0033, 0, 0.4668, -0.0033, -0.0933, 0.4668, -0.0033, -0.0933, 1.3993, -0.0945, 0, -1.2519, -0.8492, -0.0933, -1.2046, -0.8581, 0, -1.2519, -0.0945, 0, -1.2519, -0.1117, -0.0933, -1.2046, -0.8492, -0.0933, -1.2046, -1.0779, 0, 1.3993, -1.0779, -0.0933, -1.3967, -1.0779, 0, -1.3967, -1.0779, 0, 1.3993, -1.0779, -0.0933, 1.3993, -1.0779, -0.0933, -1.3967, -0.2807, 0, 0.0378, -0.0033, -0.0933, 0.4668, -0.0033, 0, 0.4668, -0.2807, 0, 0.0378, -0.2617, -0.0933, 0.0378, -0.0033, -0.0933, 0.4668, -0.8581, 0, -1.2519, -0.9565, -0.0933, -1.0743, -0.9691, 0, -1.1171, -0.8581, 0, -1.2519, -0.8492, -0.0933, -1.2046, -0.9565, -0.0933, -1.0743, -1.0779, 0, -1.3967, -0.0033, -0.0933, -1.3967, -0.0033, 0, -1.3967, -1.0779, 0, -1.3967, -1.0779, -0.0933, -1.3967, -0.0033, -0.0933, -1.3967, -0.0033, 0, -0.4241, -0.2617, -0.0933, 0.0378, -0.2807, 0, 0.0378, -0.0033, 0, -0.4241, -0.0033, -0.0933, -0.4241, -0.2617, -0.0933, 0.0378, -0.9691, 0, -1.1171, -0.9439, -0.0933, 1.0623, -0.9691, 0, 1.1197, -0.9691, 0, -1.1171, -0.9565, -0.0933, -1.0743, -0.9439, -0.0933, 1.0623, -0.0033, 0, -1.3967, -0.0033, -0.0933, -0.4241, -0.0033, 0, -0.4241, -0.0033, 0, -1.3967, -0.0033, -0.0933, -1.3967, -0.0033, -0.0933, -0.4241, -0.9691, 0, 1.1197, -0.8597, -0.0933, 1.2191, -0.8803, 0, 1.2698, -0.9691, 0, 1.1197, -0.9439, -0.0933, 1.0623, -0.8597, -0.0933, 1.2191, -0.0945, 0, 1.2698, -0.111, -0.0933, 0.4668, -0.0945, 0, 0.4668, -0.0945, 0, 1.2698, -0.111, -0.0933, 1.2191, -0.111, -0.0933, 0.4668, -0.8803, 0, 1.2698, -0.111, -0.0933, 1.2191, -0.0945, 0, 1.2698, -0.8803, 0, 1.2698, -0.8597, -0.0933, 1.2191, -0.111, -0.0933, 1.2191, -0.0945, 0, 0.4668, -0.3815, -0.0933, 0.0378, -0.3593, 0, 0.0378, -0.0945, 0, 0.4668, -0.111, -0.0933, 0.4668, -0.3815, -0.0933, 0.0378, -0.3593, 0, 0.0378, -0.1172, -0.0933, -0.4241, -0.0945, 0, -0.4241, -0.3593, 0, 0.0378, -0.3815, -0.0933, 0.0378, -0.1172, -0.0933, -0.4241, -0.0945, 0, -0.4241, -0.1117, -0.0933, -1.2046, -0.0945, 0, -1.2519, -0.0945, 0, -0.4241, -0.1172, -0.0933, -0.4241, -0.1117, -0.0933, -1.2046, -0.0033, 0, 1.3993, -1.0779, -0.0933, 1.3993, -1.0779, 0, 1.3993, -0.0033, 0, 1.3993, -0.0033, -0.0933, 1.3993, -1.0779, -0.0933, 1.3993, -0.004, -0.091, 1.3993, -1.0578, -0.091, -1.3967, -0.004, -0.091, -1.3967, -0.004, -0.091, 1.3993, -1.0578, -0.091, 1.3993, -1.0578, -0.091, -1.3967, -1.0578, -0.0052, 1.3993, -0.004, -0.0052, -1.3967, -1.0578, -0.0052, -1.3967, -1.0578, -0.0052, 1.3993, -0.004, -0.0052, 1.3993, -0.004, -0.0052, -1.3967, -0.004, -0.0052, -1.3967, -0.004, -0.091, 1.3993, -0.004, -0.091, -1.3967, -0.004, -0.0052, -1.3967, -0.004, -0.0052, 1.3993, -0.004, -0.091, 1.3993 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -0.0945, 0, 1.2698, -0.0033, 0, 0.4668, -0.0033, 0, 1.3993, -0.0945, 0, 0.4668, -0.0033, 0, 0.4668, -0.0945, 0, 1.2698, -1.0779, 0, -1.3967, -0.8581, 0, -1.2519, -0.9691, 0, -1.1171, -0.0945, 0, 0.4668, -0.2807, 0, 0.0378, -0.0033, 0, 0.4668, -1.0779, 0, -1.3967, -0.0945, 0, -1.2519, -0.8581, 0, -1.2519, -0.3593, 0, 0.0378, -0.2807, 0, 0.0378, -0.0945, 0, 0.4668, -0.0945, 0, -0.4241, -0.2807, 0, 0.0378, -0.3593, 0, 0.0378, -0.0033, 0, -1.3967, -0.0945, 0, -1.2519, -1.0779, 0, -1.3967, -0.0945, 0, -0.4241, -0.0033, 0, -0.4241, -0.2807, 0, 0.0378, -0.0033, 0, -1.3967, -0.0945, 0, -0.4241, -0.0945, 0, -1.2519, -0.0033, 0, -0.4241, -0.0945, 0, -0.4241, -0.0033, 0, -1.3967, -0.9691, 0, -1.1171, -1.0779, 0, 1.3993, -1.0779, 0, -1.3967, -1.0779, 0, 1.3993, -0.0945, 0, 1.2698, -0.0033, 0, 1.3993, -1.0779, 0, 1.3993, -0.8803, 0, 1.2698, -0.0945, 0, 1.2698, -0.9691, 0, 1.1197, -1.0779, 0, 1.3993, -0.9691, 0, -1.1171, -1.0779, 0, 1.3993, -0.9691, 0, 1.1197, -0.8803, 0, 1.2698, -0.0033, -0.0933, 0.4668, -0.111, -0.0933, 1.2191, -0.0033, -0.0933, 1.3993, -0.0033, -0.0933, 0.4668, -0.111, -0.0933, 0.4668, -0.111, -0.0933, 1.2191, -0.2617, -0.0933, 0.0378, -0.111, -0.0933, 0.4668, -0.0033, -0.0933, 0.4668, -0.8492, -0.0933, -1.2046, -1.0779, -0.0933, -1.3967, -0.9565, -0.0933, -1.0743, -0.2617, -0.0933, 0.0378, -0.3815, -0.0933, 0.0378, -0.111, -0.0933, 0.4668, -0.2617, -0.0933, 0.0378, -0.1172, -0.0933, -0.4241, -0.3815, -0.0933, 0.0378, -0.8492, -0.0933, -1.2046, -0.0033, -0.0933, -1.3967, -1.0779, -0.0933, -1.3967, -0.1117, -0.0933, -1.2046, -0.0033, -0.0933, -1.3967, -0.8492, -0.0933, -1.2046, -0.0033, -0.0933, -0.4241, -0.1172, -0.0933, -0.4241, -0.2617, -0.0933, 0.0378, -0.1172, -0.0933, -0.4241, -0.0033, -0.0933, -1.3967, -0.1117, -0.0933, -1.2046, -0.1172, -0.0933, -0.4241, -0.0033, -0.0933, -0.4241, -0.0033, -0.0933, -1.3967, -1.0779, -0.0933, 1.3993, -0.9565, -0.0933, -1.0743, -1.0779, -0.0933, -1.3967, -1.0779, -0.0933, 1.3993, -0.9439, -0.0933, 1.0623, -0.9565, -0.0933, -1.0743, -0.111, -0.0933, 1.2191, -1.0779, -0.0933, 1.3993, -0.0033, -0.0933, 1.3993, -1.0779, -0.0933, 1.3993, -0.8597, -0.0933, 1.2191, -0.9439, -0.0933, 1.0623, -0.8597, -0.0933, 1.2191, -1.0779, -0.0933, 1.3993, -0.111, -0.0933, 1.2191, -0.0033, 0, 0.4668, -0.0033, -0.0933, 1.3993, -0.0033, 0, 1.3993, -0.0033, 0, 0.4668, -0.0033, -0.0933, 0.4668, -0.0033, -0.0933, 1.3993, -0.0945, 0, -1.2519, -0.8492, -0.0933, -1.2046, -0.8581, 0, -1.2519, -0.0945, 0, -1.2519, -0.1117, -0.0933, -1.2046, -0.8492, -0.0933, -1.2046, -1.0779, 0, 1.3993, -1.0779, -0.0933, -1.3967, -1.0779, 0, -1.3967, -1.0779, 0, 1.3993, -1.0779, -0.0933, 1.3993, -1.0779, -0.0933, -1.3967, -0.2807, 0, 0.0378, -0.0033, -0.0933, 0.4668, -0.0033, 0, 0.4668, -0.2807, 0, 0.0378, -0.2617, -0.0933, 0.0378, -0.0033, -0.0933, 0.4668, -0.8581, 0, -1.2519, -0.9565, -0.0933, -1.0743, -0.9691, 0, -1.1171, -0.8581, 0, -1.2519, -0.8492, -0.0933, -1.2046, -0.9565, -0.0933, -1.0743, -1.0779, 0, -1.3967, -0.0033, -0.0933, -1.3967, -0.0033, 0, -1.3967, -1.0779, 0, -1.3967, -1.0779, -0.0933, -1.3967, -0.0033, -0.0933, -1.3967, -0.0033, 0, -0.4241, -0.2617, -0.0933, 0.0378, -0.2807, 0, 0.0378, -0.0033, 0, -0.4241, -0.0033, -0.0933, -0.4241, -0.2617, -0.0933, 0.0378, -0.9691, 0, -1.1171, -0.9439, -0.0933, 1.0623, -0.9691, 0, 1.1197, -0.9691, 0, -1.1171, -0.9565, -0.0933, -1.0743, -0.9439, -0.0933, 1.0623, -0.0033, 0, -1.3967, -0.0033, -0.0933, -0.4241, -0.0033, 0, -0.4241, -0.0033, 0, -1.3967, -0.0033, -0.0933, -1.3967, -0.0033, -0.0933, -0.4241, -0.9691, 0, 1.1197, -0.8597, -0.0933, 1.2191, -0.8803, 0, 1.2698, -0.9691, 0, 1.1197, -0.9439, -0.0933, 1.0623, -0.8597, -0.0933, 1.2191, -0.0945, 0, 1.2698, -0.111, -0.0933, 0.4668, -0.0945, 0, 0.4668, -0.0945, 0, 1.2698, -0.111, -0.0933, 1.2191, -0.111, -0.0933, 0.4668, -0.8803, 0, 1.2698, -0.111, -0.0933, 1.2191, -0.0945, 0, 1.2698, -0.8803, 0, 1.2698, -0.8597, -0.0933, 1.2191, -0.111, -0.0933, 1.2191, -0.0945, 0, 0.4668, -0.3815, -0.0933, 0.0378, -0.3593, 0, 0.0378, -0.0945, 0, 0.4668, -0.111, -0.0933, 0.4668, -0.3815, -0.0933, 0.0378, -0.3593, 0, 0.0378, -0.1172, -0.0933, -0.4241, -0.0945, 0, -0.4241, -0.3593, 0, 0.0378, -0.3815, -0.0933, 0.0378, -0.1172, -0.0933, -0.4241, -0.0945, 0, -0.4241, -0.1117, -0.0933, -1.2046, -0.0945, 0, -1.2519, -0.0945, 0, -0.4241, -0.1172, -0.0933, -0.4241, -0.1117, -0.0933, -1.2046, -0.0033, 0, 1.3993, -1.0779, -0.0933, 1.3993, -1.0779, 0, 1.3993, -0.0033, 0, 1.3993, -0.0033, -0.0933, 1.3993, -1.0779, -0.0933, 1.3993, -0.004, -0.091, 1.3993, -1.0578, -0.091, -1.3967, -0.004, -0.091, -1.3967, -0.004, -0.091, 1.3993, -1.0578, -0.091, 1.3993, -1.0578, -0.091, -1.3967, -1.0578, -0.0052, 1.3993, -0.004, -0.0052, -1.3967, -1.0578, -0.0052, -1.3967, -1.0578, -0.0052, 1.3993, -0.004, -0.0052, 1.3993, -0.004, -0.0052, -1.3967, -0.004, -0.0052, -1.3967, -0.004, -0.091, 1.3993, -0.004, -0.091, -1.3967, -0.004, -0.0052, -1.3967, -0.004, -0.0052, 1.3993, -0.004, -0.091, 1.3993 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 11.2511, 11.5642, 9.90348 )

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("p1:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 2.5, 2.7, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 2.05, 0.38, 0.994 ), Vector3( 1.38058, 0.38, 0.994 ), Vector3( -3.7322, 0.38, 1 ), Vector3( -3.51588, 0.38, 1 ), Vector3( -3.7322, 0.38, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("p2:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 2.5, 2.7, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.96533, 0.38, -0.873989 ), Vector3( 2.69421, 0.38, -0.873989 ), Vector3( 7.68662, 0.38, -0.873991 ), Vector3( 7.47356, 0.38, -0.873991 ), Vector3( 7.68662, 0.38, -0.873991 ) ]
}

[node name="Portas" type="Spatial"]
script = ExtResource( 1 )

[node name="p1" type="MeshInstance" parent="."]
transform = Transform( 8, 0, 0, 0, -8.74228e-07, -6, 0, 20, -2.62268e-07, 2.05, 0.38, 0.994 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="p1"]

[node name="CollisionShape" type="CollisionShape" parent="p1/StaticBody"]
shape = SubResource( 2 )

[node name="p2" type="MeshInstance" parent="."]
transform = Transform( -8, -7.78437e-06, 1.02131e-13, 0, -8.73788e-07, -6, 3.11531e-06, -19.9899, 2.62268e-07, 1.96533, 0.38, -0.873989 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="p2"]

[node name="CollisionShape" type="CollisionShape" parent="p2/StaticBody"]
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15.197 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.11219 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/open = SubResource( 5 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0
bus = "SFX"

[node name="sfx2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0
bus = "SFX"
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
